@@ -1,5 +1,11 @@
 2000-03-07  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
+	* parse.y (check_final_assignment): Extended to process
+	COMPOUND_EXPR.
+	(patch_assignment): Have check_final_assignment called only once.
+
+2000-03-07  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
 	* java-tree.h (IS_INIT_CHECKED): New flag.
 	* check-init.c (check_init): Test and set IS_INIT_CHECKED.
 	* parse.y (patch_string): Call force_evaluation_order on the
